# ChaotixNew

./: .editorconfig  .flake8  Makefile  pyproject.toml
chaotixcore/: manage.py
chaotixcore/project/: settings.py
