[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["hellowello <mayankekaghara.me007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
altair = "^5.3.0"
amqp = "^5.2.0"
annotated-types = "^0.6.0"
anyio = "^4.3.0"
asgiref = "^3.8.1"
asttokens = "^2.4.1"
attrs = "^23.2.0"
beautifulsoup4 = "^4.12.3"
billiard = "^4.2.0"
cachecontrol = "^0.14.0"
cachetools = "^5.3.3"
celery = "^5.4.0"
certifi = "^2024.2.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
chat-app = "^1.1.10"
click = "^8.1.7"
click-didyoumean = "^0.3.1"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
colorama = "^0.4.6"
coloredlogs = "^15.0.1"
contourpy = "^1.2.1"
cron-descriptor = "^1.4.3"
cryptography = "^42.0.5"
cycler = "^0.12.1"
decorator = "^5.1.1"
deprecated = "^1.2.14"
distro = "^1.9.0"
dj-database-url = "^2.1.0"
django = "^5.0.4"
django-celery-beat = "^2.6.0"
django-celery-results = "^2.5.1"
django-cors-headers = "^4.3.1"
django-timezone-field = "^6.1.0"
djangorestframework = "^3.15.1"
dnspython = "^2.6.1"
et-xmlfile = "^1.1.0"
eventlet = "^0.36.1"
executing = "^2.0.1"
fastapi = "^0.110.2"
ffmpy = "^0.3.2"
filelock = "^3.13.4"
firebase-admin = "^6.5.0"
firebase-rest-api = "^1.11.0"
flatbuffers = "^24.3.25"
flower = "^2.0.1"
fonttools = "^4.51.0"
fsspec = "^2024.3.1"
gcloud = "^0.18.3"
google-ai-generativelanguage = "^0.6.2"
google-api-core = "^2.18.0"
google-api-python-client = "^2.127.0"
google-auth = "^2.29.0"
google-auth-httplib2 = "^0.2.0"
google-cloud-core = "^2.4.1"
google-cloud-firestore = "^2.16.0"
google-cloud-storage = "^2.16.0"
google-crc32c = "^1.5.0"
google-generativeai = "^0.5.2"
google-resumable-media = "^2.7.0"
googleapis-common-protos = "^1.63.0"
greenlet = "^3.0.3"
grpcio = "^1.62.2"
grpcio-status = "^1.62.2"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httplib2 = "^0.22.0"
httpx = "^0.27.0"
huggingface-hub = "^0.22.2"
humanfriendly = "^10.0"
humanize = "^4.9.0"
idna = "^3.7"
imageio = "^2.34.1"
importlib-resources = "^6.4.0"
ipython = "^8.24.0"
jedi = "^0.19.1"
jinja2 = "^3.1.3"
joblib = "^1.4.0"
jsonschema = "^4.21.1"
jsonschema-specifications = "^2023.12.1"
jwcrypto = "^1.5.6"
jws = "^0.1.3"
kiwisolver = "^1.4.5"
kombu = "^5.3.7"
lazy-loader = "^0.4"
llvmlite = "^0.42.0"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.5"
matplotlib = "^3.8.4"
matplotlib-inline = "^0.1.7"
mdurl = "^0.1.2"
mpmath = "^1.3.0"
msgpack = "^1.0.8"
networkx = "^3.3"
numba = "^0.59.1"
numpy = "^1.26.4"
oauth2client = "^4.1.3"
onnxruntime = "^1.17.3"
openai = "^1.23.6"
opencv-python = "^4.9.0.80"
opencv-python-headless = "^4.9.0.80"
openpyxl = "^3.1.2"
orjson = "^3.10.1"
packaging = "^24.0"
pandas = "^2.2.2"
parso = "^0.8.4"
pillow = "^10.3.0"
pkce = "^1.0.3"
platformdirs = "^4.2.1"
pooch = "^1.8.1"
prometheus-client = "^0.20.0"
prompt-toolkit = "^3.0.43"
proto-plus = "^1.23.0"
protobuf = "^4.5.0,<5.0.0"
psycopg2 = "^2.9.9"
pure-eval = "^0.2.2"
pyasn1 = "^0.6.0"
pyasn1-modules = "^0.4.0"
pycparser = "^2.22"
pycryptodome = "^3.20.0"
pydantic = "^2.7.1"
pydantic-core = "^2.18.2"
pydub = "^0.25.1"
pygithub = "^2.3.0"
pygments = "^2.17.2"
pyjwt = "^2.8.0"
pymatting = "^1.1.12"
pynacl = "^1.5.0"
pyparsing = "^3.1.2"
pyreadline3 = "^3.4.1"
pytesseract = "^0.3.10"
python-crontab = "^3.0.0"
python-dateutil = "^2.9.0.post0"
python-jwt = "^4.1.0"
python-multipart = "^0.0.9"
pytz = "^2024.1"
pyyaml = "^6.0.1"
redis = "^5.0.4"
referencing = "^0.35.0"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
rich = "^13.7.1"
rpds-py = "^0.18.0"
rsa = "^4.9"
ruff = "^0.4.2"
scikit-image = "^0.23.2"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
semantic-version = "^2.10.0"
shellingham = "^1.5.4"
six = "^1.16.0"
sniffio = "^1.3.1"
soupsieve = "^2.5"
sqlparse = "^0.5.0"
stack-data = "^0.6.3"
starlette = "^0.37.2"
stripe = "^9.4.0"
sympy = "^1.12"
threadpoolctl = "^3.4.0"
tifffile = "^2024.4.24"
tomlkit = "^0.12.4"
toolz = "^0.12.1"
tornado = "^6.4"
tqdm = "^4.66.2"
traitlets = "^5.14.3"
typer = "^0.12.3"
typing-extensions = "^4.11.0"
tzdata = "^2024.1"
uritemplate = "^4.1.1"
urllib3 = "^2.2.1"
uvicorn = "^0.29.0"
vine = "^5.1.0"
wcwidth = "^0.2.13"
websockets = "^12.0"
wrapt = "^1.16.0"


[tool.poetry.group.dev.dependencies]
colorlog = "^6.8.2"
pre-commit = "^3.7.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
